# JFetch

./: .gitignore  Doxyfile  LICENSE  README.md
docs/html/: annotated.html  annotated_dup.js  classes.html  classjfetch_1_1_http_client-members.html  classjfetch_1_1_http_client.html  classjfetch_1_1_http_client.js  classjfetch_1_1_j_fetch-members.html  classjfetch_1_1_j_fetch.html  classjfetch_1_1_j_fetch.js  classjfetch_1_1_j_fetch_endpoint_not_found_exception-members.html  classjfetch_1_1_j_fetch_endpoint_not_found_exception.html  classjfetch_1_1_j_fetch_endpoint_not_found_exception.js  classjfetch_1_1_j_fetch_exception-members.html  classjfetch_1_1_j_fetch_exception.html  classjfetch_1_1_j_fetch_exception.js  classjfetch_1_1_j_fetch_h_t_t_p_exception-members.html  classjfetch_1_1_j_fetch_h_t_t_p_exception.html  classjfetch_1_1_j_fetch_h_t_t_p_exception.js  classjfetch_1_1_j_fetch_parsing_exception-members.html  classjfetch_1_1_j_fetch_parsing_exception.html  classjfetch_1_1_j_fetch_parsing_exception.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  jfetch_8hpp.html  jfetch_8hpp.js  jfetch_8hpp_source.html  navtreedata.js  navtreeindex0.js
docs/latex/: annotated.tex  classjfetch_1_1_http_client.tex  classjfetch_1_1_j_fetch.tex  classjfetch_1_1_j_fetch_endpoint_not_found_exception.eps  files.tex  (+11 more)
examples/: CMakeLists.txt  cat_image.cpp  dummyjson.cpp  error.cpp  products.cpp
include/: jfetch.hpp
(+22 files in other folders)
